2009-08-31  Ian Piumarta  <com -dot- gmail -at- piumarta (backwards)>

	* src/plugins/UnixOSProcessPlugin: Updated to version 20.

2009-08-30    <piumarta@ubuntu.piumarta.com>

	* vm/sqUnixMain.c (main): squeakPlugin path defaults to VM
	executable directory.

	* plugins/SqueakFFIPrims/config.cmake: Explicitly include
	generated source in plugin_sources.

	* vm/sqUnixExternalPrims.c (ioLoadModule): squeakPlugins can
	contain ':'-separated paths.  Distinguish module and library
	prefix and suffix.  Try to load a module from each squeakPlugins
	path with module prefix/suffix, then try dlopen() with no explicit
	path and platoform's library prefix/suffix.

	* vm/config.cmake: Configure {MODULE,LIBRARY}_{PREFIX,SUFFIX}.
	Change default module prefix to "so.", suffix to "".

	* vm/sqUnixMain.c (main): Default plugin location is VM directory.

2009-08-27  Ian Piumarta  <com -dot- gmail -at- piumarta (backwards)>

	* cmake/squeak.in: Path and text encodings are UTF-8 unless
	overridden by command-line options.

	* cmake/configure (VM_VERSION): Generate automatically from
	VMMaker version and SVN revision.  Remove SQ_VERSION.

	* vm/config.cmake: Extract major.minor.patch-release from
	version.

	* CMakeLists.txt: Remove references to SQ_VERSION.

2009-08-27    <piumarta@ubuntu.piumarta.com>

	* vm/build.cmake: Install squeak.sh.

	* cmake/squeak.in: Deal with plugin path and pulseaudio; move menu
	cruft elsewhere.

	* cmake/squeak.sh.in: Added for launching from somewhere that
	doesn't have a prompt.

2009-08-26  Ian Piumarta  <com -dot- gmail -at- piumarta (backwards)>

	* plugins/Mpeg3Plugin/config.cmake: Added.

	* CMakeLists.txt: Print C flags while configuring.

	* cmake/Plugins.cmake: Recognise --without-PluginName for all
	plugins.

	* src: Regenerate from Balloon3D-Plugins-ar.4.mcz
	DBus-Plugin-bf.32.mcz GStreamer-Plugins-JMM.16.mcz
	Kedama-Plugins-yo.1.mcz Rome-Plugin-yo.39.mcz
	OSProcessPlugin-dtl.16.mcz
	VMConstruction-Plugins-AioPlugin-dtl.9.mcz