@@ -3,25 +3,25 @@ SET (USE_LIBFFI)
 IF (OPT_without-ffi)
   PLUGIN_DISABLE ()
 ELSE ()
-  IF (${VM_HOST_CPU} STREQUAL "powerpc" OR ${VM_HOST_CPU} STREQUAL "ppc")
+  IF (vm-host-cpu STREQUAL "powerpc" OR vm-host-cpu STREQUAL "ppc")
     SET (cpu ppc)
-  ELSEIF (${VM_HOST_CPU} MATCHES  "i[3456789]86")
+  ELSEIF (vm-host-cpu MATCHES  "i[3456789]86")
     SET (cpu x86)
   ELSE ()
     SET (USE_LIBFFI 1)
   ENDIF ()
 
-  IF (${VM_HOST_OS} STREQUAL "linux")
+  IF (vm-host-os STREQUAL "linux")
     SET (abi sysv)
-  ELSEIF (${VM_HOST_OS} MATCHES "darwin.*")
+  ELSEIF (vm-host-os MATCHES "darwin.*")
     SET (abi darwin)
   ELSE ()
     SET (USE_LIBFFI 1)
   ENDIF ()
 
-  # PLUGIN_MESSAGE ("detected ${cpu}-${abi}")
-
-  IF (USE_LIBFFI OR NOT EXISTS ${plugin}/${cpu}-${abi}.c OR NOT EXISTS ${plugin}/${cpu}-${abi}-asm.S)
+  IF (USE_LIBFFI
+      OR NOT EXISTS "${unix}/plugins/${plugin}/${cpu}-${abi}.c"
+      OR NOT EXISTS "${unix}/plugins/${plugin}/${cpu}-${abi}-asm.S")
     SET (cpu any)
     SET (abi libffi)
     PLUGIN_MESSAGE ("${cpu}-${abi}")
@@ -43,7 +43,8 @@ ELSE ()
   ELSE ()
     PLUGIN_DISABLE ()
   ENDIF ()
-    PLUGIN_SOURCES ("${SQFFIC} ${unix}/plugins/${plugin}/${cpu}-${abi}.c ${unix}/plugins/${plugin}/${cpu}-${abi}-asm.S")
+  ENABLE_LANGUAGE (ASM)
+  PLUGIN_SOURCES ("${SQFFIC} ${unix}/plugins/${plugin}/${cpu}-${abi}.c ${unix}/plugins/${plugin}/${cpu}-${abi}-asm.S")
 ENDIF ()
 
 CONFIG_DEFINE (HAVE_FFI_H)
